tests/postgres/ui-common/batch_param_in_outer_sql_missing_in_struct.stderr
error[E0609]: no field `stock` on type `BatchNamePrice`
  --> tests/postgres/tmp-ui/batch_param_in_outer_sql_missing_in_struct.rs:17:13
   |
17 |       let _ = sql_forge!(
   |  _____________^
18 | |         r#"
19 | |         INSERT INTO products (name, price, stock, category)
20 | |         VALUES (:name, :price, :stock, 'Test'), {(:name, :price, :stock, 'Test')}
...  |
23 | |         ..batch_items
24 | |     );
   | |_____^ unknown field
   |
   = note: this error originates in the macro `sql_forge` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `{integer}: SqlForgeValidatorValue<Option<_>>` is not satisfied
  --> tests/postgres/tmp-ui/batch_param_in_outer_sql_missing_in_struct.rs:17:13
   |
17 |       let _ = sql_forge!(
   |  _____________^
18 | |         r#"
19 | |         INSERT INTO products (name, price, stock, category)
20 | |         VALUES (:name, :price, :stock, 'Test'), {(:name, :price, :stock, 'Test')}
...  |
23 | |         ..batch_items
24 | |     );
   | |_____^ the trait `SqlForgeValidatorValue<Option<_>>` is not implemented for `{integer}`
   |
   = help: the following other types implement trait `SqlForgeValidatorValue<Expected>`:
             `f32` implements `SqlForgeValidatorValue<f32>`
             `f64` implements `SqlForgeValidatorValue<f64>`
             `i16` implements `SqlForgeValidatorValue<i16>`
             `i32` implements `SqlForgeValidatorValue<i32>`
             `i64` implements `SqlForgeValidatorValue<i64>`
             `i8` implements `SqlForgeValidatorValue<i8>`
             `isize` implements `SqlForgeValidatorValue<isize>`
             `u16` implements `SqlForgeValidatorValue<u16>`
           and $N others
note: required by a bound in `sql_forge::sql_forge_validator_value`
  --> src/traits.rs
   |
   | pub fn sql_forge_validator_value<Expected, T>(value: &T) -> Expected
   |        ------------------------- required by a bound in this function
   | where
   |     T: SqlForgeValidatorValue<Expected>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `sql_forge_validator_value`
   = note: this error originates in the macro `sql_forge` (in Nightly builds, run with -Z macro-backtrace for more info)
